--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <nav>
 <ul>
     <li> <a href="index.html"> Home  </a> </li>
-    <li> Important Links </li>
+    <li> <a href="htdocs/important_links.html">Important Links </a> </li>
     <li> <a href="htdocs/safety_measures.html"> Safety Measures </a> </li>
 </ul>
 </nav>
@@ -65,9 +65,9 @@ volcano can also cause wildfires.
 <nav id=menu> <!-- work in progress <-->
 <h3> Most Destructive Eruptions in the Philippines </h3>
 <ul> 
-<li> 1991 Pinatubo Eruption </li>
-<li> 1814 Mayon Eruption </li>
-<li> 1754 Taal Eruption </li>
+<li> <a href= "htdocs/1991_pinatubo.html">1991 Pinatubo Eruption </a> </li>
+<li> <a href= "htdocs/1814_mayon.html">1814 Mayon Eruption </a> </li>
+<li> <a href= "htdocs/1754_taal.html">1754 Taal Eruption </a> </li>
 </ul>
 </nav>
 
@@ -75,15 +75,25 @@ volcano can also cause wildfires.
 
 
 <footer> <!-- put all sources, including pictures <-->
-<p> Sources:<p>
-<p> World Health Organization. (n.d.). Volcanic Eruptions. https://www.who.int/health-topics/volcanic-eruptions#tab=tab_1 </p>
-<p> Photos taken from: </p>
-<p> Volcanic Eruption [Online Image]. (n.d.). National Museum of History. https://naturalhistory.si.edu/education/teaching-resources/earth-science/when-volcanoes-erupt </p>
-<p> Volcanic Eruption [Online Image]. (February 16, 2021). The Atlantic. https://www.theatlantic.com/photo/2021/02/photos-recent-eruptions-mount-etna/618113/ </p>
-<p> Banner made in: </p>
-<p> Canva. https://www.canva.com/ </p>	
-<p> Videos taken from:</p>
-<p> ABC News. (2021, December 6). Death toll rises in Indonesian Mount Semeru volcano eruption | GMA [Video]. YouTube. https://www.youtube.com/watch?v=pW_dP2Hi2-Y</p>
+    <h5> Contact Me </h5>
+    <div class="contact">
+        <ul class="contact-list">
+        <li class="twitter"> <a href="https://twitter.com/EmperorPacana">  </a> </li>
+        <li class="github"> <a href="https://github.com/efagpacana"> </a> </li>
+        <li class="email"> <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSGLrcrMNvDRJlQlmRpnJBkNMdKqbNPrQkpvxwxhRTrCPLmBkwhSvFmxVCBPgLtDnbbNVzst"> </a> </li>
+        </ul>
+    </div>
+
+    <hr>
+    <p> Sources:<p>
+    <p> World Health Organization. (n.d.). Volcanic Eruptions. https://www.who.int/health-topics/volcanic-eruptions#tab=tab_1 </p>
+    <p> Photos taken from: </p>
+    <p> Volcanic Eruption [Online Image]. (n.d.). National Museum of History. https://naturalhistory.si.edu/education/teaching-resources/earth-science/when-volcanoes-erupt </p>
+    <p> Volcanic Eruption [Online Image]. (February 16, 2021). The Atlantic. https://www.theatlantic.com/photo/2021/02/photos-recent-eruptions-mount-etna/618113/ </p>
+    <p> Banner made in: </p>
+    <p> Canva. https://www.canva.com/ </p>	
+    <p> Videos taken from:</p>
+    <p> ABC News. (2021, December 6). Death toll rises in Indonesian Mount Semeru volcano eruption | GMA [Video]. YouTube. https://www.youtube.com/watch?v=pW_dP2Hi2-Y</p>
 </footer>
 
 </body>
