--- a/htdocs/safety_measures.html
+++ b/htdocs/safety_measures.html
@@ -7,7 +7,7 @@
 
 <meta name = "keywords" content="volcanoes">
 
-<link rel="stylesheet" type="text/css" href="..	/css/projectstyle.css">
+<link rel="stylesheet" type="text/css" href="../css/projectstyle.css">
 
 <link rel="shortcut icon" type="image/png" href="../images/32-favicon.png"/>
 </head>
@@ -22,7 +22,7 @@
 <nav>
     <ul>
         <li style="padding-right: 10px;"> <a href="../index.html"> Home </li> </a> 
-        <li style="padding-right: 10px;"> Important Links </li>
+        <li style="padding-right: 10px;"> <a href="important_links.html">Important Links </a> </li>
         <li> <a href="safety_measures.html"> Safety Measures </a> </li> 
     </ul>
 </nav>
@@ -63,15 +63,36 @@
     <li> If you need to go outdoors, make sure your whole body is covered. Wear pants and a long-sleeved shirt. </li>
     <li> Wear goggles and mask as protection for your face </li>
     </ul>
+
+    <hr>
+
+    <nav id=menu> <!-- work in progress <-->
+        <h3> Most Destructive Eruptions in the Philippines </h3>
+        <ul> 
+        <li> <a href= "1991_pinatubo.html">1991 Pinatubo Eruption </a> </li>
+        <li> <a href= "1814_mayon.html">1814 Mayon Eruption </a> </li>
+        <li> <a href= "1754_taal.html">1754 Taal Eruption </a> </li>
+        </ul>
+        </nav>
+        
 </article>
 
 <hr>
 
 <footer> <!-- put all sources, including pictures <-->
-<p> Sources:<p>
-<p> Center for Disease Control and Prevention. (May 18, 2018). Key Facts About Protecting Yourself During A Volcanic Eruption. https://www.cdc.gov/disasters/volcanoes/during.html </p>
-<p> Banner made in: </p>
-<p> Canva. https://www.canva.com/ </p>	
+    <h5> Contact Me </h5>
+    <div class="contact">
+        <ul class="contact-list">
+        <li class="twitter"> <a href="https://twitter.com/EmperorPacana">  </a> </li>
+        <li class="github"> <a href="https://github.com/efagpacana"> </a> </li>
+        <li class="email"> <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSGLrcrMNvDRJlQlmRpnJBkNMdKqbNPrQkpvxwxhRTrCPLmBkwhSvFmxVCBPgLtDnbbNVzst"> </a> </li>
+        </ul>
+    </div>
+    <hr>
+    <p> Sources:<p>
+    <p> Center for Disease Control and Prevention. (May 18, 2018). Key Facts About Protecting Yourself During A Volcanic Eruption. https://www.cdc.gov/disasters/volcanoes/during.html </p>
+    <p> Banner made in: </p>
+    <p> Canva. https://www.canva.com/ </p>	
 </footer>
 
 </body>
